--- a/automations/kitchen/lights.yaml
+++ b/automations/kitchen/lights.yaml
@@ -11,6 +11,11 @@ trigger:
   - platform: state
     entity_id:
       - binary_sensor.area_kitchen_occupied
+      - binary_sensor.area_kitchen_bright
+      - input_boolean.area_kitchen_automations
+      - binary_sensor.area_kitchen_humidity_trend
+      - binary_sensor.area_kitchen_temperature_trend
+      - binary_sensor.people_home
 
 condition:
   - condition: state
@@ -21,26 +26,25 @@ action:
   - choose:
       - conditions:
           - condition: state
-            entity_id: binary_sensor.area_kitchen_occupied
             state: "on"
-          - condition: or
-            conditions:
-              - condition: state
-                entity_id: binary_sensor.area_kitchen_bright
-                state: "off"
-              - condition: state
-                entity_id: sun.sun
-                state: below_horizon
+            entity_id: binary_sensor.area_kitchen_occupied
+          - condition: state
+            state: "off"
+            entity_id: binary_sensor.area_kitchen_bright
+          - condition: state
+            state: "on"
+            entity_id: binary_sensor.people_home
         sequence:
           - service: light.turn_on
-            data:
-              brightness_pct: 100
             target:
-              entity_id: light.kitchen_lights
+              area_id: kitchen
+            data:
+              transition: 3
+              color_temp: "{{ state_attr('switch.adaptive_lighting_adaptive_lights', 'color_temp_mired') }}"
+              brightness_pct: "{{ state_attr('switch.adaptive_lighting_adaptive_lights', 'brightness_pct') | int }}"
     default:
-      - condition: state
-        entity_id: binary_sensor.area_kitchen_occupied
-        state: "off"
       - service: light.turn_off
         target:
           area_id: kitchen
+        data:
+          transition: 3
