--- a/automations/lounge/lights.yaml
+++ b/automations/lounge/lights.yaml
@@ -13,6 +13,7 @@ trigger:
       - binary_sensor.area_lounge_occupied
       - binary_sensor.area_lounge_bright
       - input_boolean.area_lounge_automations
+      - binary_sensor.people_home
 
 condition:
   - condition: state
@@ -23,42 +24,25 @@ action:
   - choose:
       - conditions:
           - condition: state
-            entity_id: binary_sensor.area_lounge_bright
-            state: "off"
-          - condition: not
-            conditions:
-              - condition: state
-                entity_id: media_player.lounge_tv
-                state: "off"
-              - condition: state
-                entity_id: media_player.lounge_tv
-                state: "unknown"
-              - condition: state
-                entity_id: media_player.lounge_tv
-                state: "unavailable"
-          - condition: state
-            entity_id: binary_sensor.area_lounge_occupied
             state: "on"
+            entity_id: binary_sensor.area_lounge_occupied
+          - condition: state
+            state: "off"
+            entity_id: binary_sensor.area_lounge_bright
+          - condition: state
+            state: "on"
+            entity_id: binary_sensor.people_home
         sequence:
           - service: light.turn_on
-            data:
-              brightness_pct: 30
             target:
-              entity_id: light.lounge_lights
-      - conditions:
-          - condition: state
-            entity_id: binary_sensor.area_lounge_bright
-            state: "off"
-          - condition: state
-            entity_id: binary_sensor.area_lounge_occupied
-            state: "on"
-        sequence:
-          - service: light.turn_on
+              area_id: lounge
             data:
-              brightness_pct: 100
-            target:
-              entity_id: light.lounge_lights
+              transition: 3
+              color_temp: "{{ state_attr('switch.adaptive_lighting_adaptive_lights', 'color_temp_mired') }}"
+              brightness_pct: "{{ state_attr('switch.adaptive_lighting_adaptive_lights', 'brightness_pct') | int }}"
     default:
       - service: light.turn_off
         target:
           area_id: lounge
+        data:
+          transition: 3
