--- a/templates/sensors/energy.yaml
+++ b/templates/sensors/energy.yaml
@@ -3,7 +3,7 @@
 ####################################
 - unique_id: total_energy_usage
   name: Total Energy Usage
-  device_class: power
+  device_class: energy
   unit_of_measurement: "kWh"
   state_class: measurement
   state: "{{ (states('sensor.gas_daily_usage') | float + states('sensor.electricity_daily_usage') | float) | round(2) }}"
@@ -13,4 +13,4 @@
 - unique_id: current_electricity_price
   name: Current Electricity Price
   unit_of_measurement: "p/kWh"
-  state: "{{ states('sensor.octopus_agile_previous_rate') | float / 100 }}"
+  state: "{{ states('sensor.electricity_unit_cost') | float / 100 }}"
