Update Alexa configs

--- a/groups/echos.yaml
+++ b/groups/echos.yaml
@@ -4,8 +4,10 @@ echos:
   entities:
     - media_player.bedroom_echo
     - media_player.bedroom_fire_tv
+    - media_player.downstairs
+    - media_player.everywhere
     - media_player.entrance_tablet
     - media_player.kitchen_echo_show
     - media_player.lounge_echo
+    - media_player.lounge_fire_tv
     - media_player.study_echo
-    - media_player.study_fire_tv
