--- a/configuration/scripts.yaml
+++ b/configuration/scripts.yaml
@@ -30,3 +30,12 @@ script:
       data:
         mac: !secret endeavor_1gb
     mode: single
+  print_entities_to_file:
+    alias: 'Print Entities To File'
+    sequence:
+    - service: notify.entity_log
+      data_template:
+        message: >
+          {% for state in states %}
+            - {{- state.entity_id -}}
+          {% endfor %}
