Update Lounge TV state

--- a/configuration/media_player.yaml
+++ b/configuration/media_player.yaml
@@ -107,7 +107,7 @@ media_player:
           entity_id: media_player.lounge_tv_adb
           volume_level: "{{ volume_level }}"
     attributes:
-      state: media_player.lounge_fire_tv_adb
+      state: media_player.lounge_fire_tv
       is_volume_muted: media_player.lounge_tv_adb|is_volume_muted
       source: media_player.lounge_fire_tv_adb|source
       source_list: media_player.lounge_fire_tv_adb|source_list
